# satellite-tracker

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-ci.yml  run-tracker.yml
src/iss_tracker/: __main__.py
src/iss_tracker.egg-info/: SOURCES.txt
src/iss_tracker/calc/: frames.py
src/iss_tracker/domain/: observer.py  tle.py
src/iss_tracker/infrastructure/: tle_provider.py
src/satellite_tracker/: __main__.py
src/satellite_tracker.egg-info/: PKG-INFO  SOURCES.txt
src/satellite_tracker/calc/: frames.py  propagator.py  topocentric.py
src/satellite_tracker/domain/: constellation_tracker.py  observer.py  tle.py  tracker.py
src/satellite_tracker/infrastructure/: tle_provider.py
tests/: test_frames.py  test_observer.py  test_propagator.py  test_tle.py  test_topocentric.py  test_tracker.py
