[project]
name = "satellite-tracker"
version = "0.1.0"
description = "Satellite tracking pipeline using TLE and SGP4"
authors = [
    { name = "Karol Pałac" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "sgp4",
    "requests"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
